public/styles/dsViews.css
/* ... */
.classPlain {
    clear: both;
    margin-top: 10px;
}

.showExampleDiv:hover {
    background-color: #b4191e;
    cursor: pointer;
    box-shadow: none;
}

.dsExampleClass table {
    border-style: none !important;
}

.dsExampleClass td {
    border-style: none !important;
}

.dsExampleClass tr {
    border-style: none !important;
}

.firstRowTableView td {
    font-weight: bolder
}

.firstRowDescription {
    color: white;
}

table .dsRangeClasses {
    border-style: none;
}

.dsRangeClasses tr,
.dsRangeClasses td {
    border-style: none;
}

.thContent {
    padding: 4px;
    display: flex;
}

#domainSpecification-info-modal {
    overflow-x: auto;
    max-height: 500px;
}

.firstRowDescription a {
    color: #24e1cf;
}

.firstLevel {
    background-color: white;
}

.dsTableView table {
    width: 100%;
}


/* .dsTableView table, */

.dsTableView td {
    border-left: 1px solid black;
    border-bottom: 1px solid black;
    /* border-right: 1px solid black; */
    font-weight: lighter;
}

.dsTableView table {
    border-right: 1px solid black;
}


/* .dsTableView td:first-child {
    border-left: 1px solid black;
} */


/* .dsTableView td:last-child {
    border-right: 1px solid black;
} */

.innerTable tr,
.innerTable td {
    border-top: 1px solid black;
}

.innerTable table,
.innerTable tbody {
    border-style: none;
}

.innerTable tr:last-child,
.innerTable td:last-child {
    border-right-style: none !important;
}

.innerTable td:first-child {
    border-left: none;
    border-right: none;
}

.cardinality {
    border-right: none !important;
    border-left: 1px solid black !important;
    text-align: center;
}

.tdcardinality {
    padding: 4px;
    text-align: center !important;
}

.secondLevel {
    background-color: #f5f5f5;
    border-style: none;
}

.secondLevel td {
    border-bottom-style: none;
}

.thirdLevel {
    background-color: #e8e8e8;
    border-style: none;
}

.thirdLevel td {
    border-bottom-style: none;
}

.fourthLevel {
    background-color: #dadada;
    border-style: none;
}

.dsClass {
    font-weight: bolder;
    color: #01106b;
}

.btnDS {
    padding-top: 3px;
    padding-bottom: 3px;
    webkit-box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.2);
    box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.2);
}

.btnDS:hover {
    box-shadow: none;
    cursor: pointer;
}

.dsRangeClassBtn {
    color: #0009b4;
    text-decoration: underline;
    display: inline-block;
    padding: 0 7px 0px 7px;
    cursor: pointer;
    webkit-box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.2);
    box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.2);
}

.dsRangeClassBtn:hover {
    cursor: pointer;
    box-shadow: none;
}

.dsTableView img {
    margin-bottom: 8px;
}

table.noBorderClass,
.noBorderClass tr,
.noBorderClass td {
    border-style: none;
}

.noBorderClass td {
    position: relative;
}

.noBorderClass td:first-child {
    border-right-style: none !important;
}

table.noBorder,
.noBorder tr,
.noBorder td {
    border-style: none;
}

.noBorder td:first-child {
    border-right: 1px solid black;
}

.detailFooter {
    height: 50px;
}

.tableViewDS {
    background-color: white;
    /* padding: 5px !important; */
    margin: 5px !important;
    /*border-style: dashed solid;*/
    border: 0.1rem #dedede dashed;
    text-align: left;
}

.jstree-grid-wrapper {
    width: 100% !important;
}

.accordionHeader {
    background-color: #dadada;
}

.accordionHeader:hover {
    cursor: pointer;
}

.exampleClassContent {
    background-color: white;
    color: black;
    padding: 5px !important;
    margin: 5px !important;
    border: 0.1rem #dedede dashed;
    text-align: left;
    overflow: auto;
}

.descriptionInner {
    padding: 30px;
    background-color: white;
}

.descriptionInner table {
    text-align: left;
}

.descriptionInner tr {
    margin: 0;
    padding: 0;
}

.descriptionText {
    text-align: center;
    padding-bottom: 15px;
}

.line {
    box-sizing: border-box;
    height: 1px;
    border: 1px solid rgba(194, 194, 194, 0.46);
    margin: 0.7em 0;
}

.descriptionInner td:first-child {
    width: 1px;
    white-space: nowrap;
    overflow: hidden;
    padding-right: 15px;
}

.quickNavDs {
    padding-bottom: 5px;
    overflow: hidden;
}

.quickNav .btnDS {
    padding: 10px;
    float: left;
}

.quickNav:after {
    clear: both;
    content: "";
    display: table;
}

div.tab button {
    background-color: #F4F4F4;
    float: left;
    border: none;
    outline: none;
    cursor: pointer;
    padding: 14px 16px;
    transition: 0.3s;
    webkit-box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.2);
    box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.2);
}

div.tab button:hover {
    background-color: white;
    box-shadow: none;
}

div.tab button.active {
    background-color: white;
    cursor: default;
    box-shadow: none;
}

.tabcontent {
    display: none;
    padding-top: 38px;
}

div.tab {
    overflow: hidden;
}

.tabcontent pre.myOutput {
    background-color: white;
    border-style: none;
    padding: 0;
    margin: 0;
}

.domainSpecification-container h4 {
    padding: 20px;
}

#graphicalLegend span {
    height: 20px;
    width: 50px;
    display: inline-block;
    border: black 1px solid;
}

.startClass {
    height: 30px !important;
    width: 30px !important;
    background-color: white;
    border-radius: 50%;
    position: relative !important;
    margin: auto !important;
    display: block !important;
}

.showExampleDiv {
    font-weight: normal !important;
}
/* ... */

